--- a/source/lvl1.html
+++ b/source/lvl1.html
@@ -34,6 +34,10 @@
   </li>
 </ul>
 <h2>Особенности вёрстки крупных сайтов:</h2>
-<p>Самое главное, это чтобы каждая сущность была независимая. Здесь к нам на помощь приходят методологии. Одна из самых популярных - БЭМ. У нас каждый сущность на сайте - уникальная и самодокументируемая. Она знает только про себя. К примеру логотип. Эта сущность знает, что имеет такие-то размеры, такой-то hover и такой-то action;</p>
+<p>Самое главное, это чтобы каждая сущность была независимая. Здесь к нам на помощь приходят методологии. Одна из самых популярных - БЭМ. У нас каждый сущность на сайте - уникальная и самодокументируемая. Она знает только про себя. К примеру логотип. Эта сущность знает, что имеет такие-то размеры, такой-то hover и такой-то action; Тогда нам будет довольно легко расширять и поддерживать сайт.</p>
+<h2>Q3: про различные устройства</h2>
+<p>Это сразу же привет передаём мета-тегу с вьюпортом. Чтобы у нас на мобилке сайт был под мобилку, а не на маленьком экране в 320рх в ширину 1440, к примеру. Иначе придётся увеличивать и постоянно свайпить как горизонтально, так и вертикально. Медиа запросы и mobile-first помогут сделать сайт для мобильного максимально оптимальным, без лишних элементов, что облегчик загрузку. Тестировать можем, при наличие устройств (мобилка, таблет, ноут, десктоп), сразу же на них, либо же через эмулятор. Где так же важно не забыть про ретину, если она имеется. И не забываем про вендорные префиксы, чтобы все браузеры воспринимали верно наши свойства.</p>
+<h2>Q4: инструменты для экономии:</h2>
+<p>Сборщики помогают. Препроцессоры, минификаторы, сборщики спрайтов и оптимизация изображений. Куча рутинной работы, которую за меня делает машина. Отладка в консоли. либо инспекторе + дебагер. Ну и конечно же знание редактора в разы ускоряет разработку. Горячие клавиши знать необходимо + слепая печать. </p>
 </body>
 </html>
