--- a/source/index.html
+++ b/source/index.html
@@ -5,63 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
-  <style>
-* {
-box-sizing: border-box;
-}
-.card {
-/* border: 2px solid lime; */
-width: 200px;
-display: flex;
-flex-direction: column;
-}
-
-.card__top {
-width: 178px;
-margin-left: auto;
-border: 4px solid black;
-border-bottom: none;
-border-left: none;
-position: relative;
-border-top-right-radius: 10px;
-}
-.card__top::before {
-content: '';
-display: block;
-position: absolute;
-top: 7px;
-left: -26px;
-width: 32px;
-transform: rotate(-46deg);
-border-top: 4px solid black;
-border-top-left-radius: 2px;
-/* border-right: 11px solid green; */
-/* border-bottom: 11px solid green; */
-}
-
-
-.card__main {
-border: 4px solid black;
-height: 230px;
-border-top: none;
-border-bottom-left-radius: 10px;
-border-bottom-right-radius: 10px;
-}
-  </style>
 </head>
 <body>
   <h1>Card is a capital of Kirill and Alexander</h1>
-  <div class="card">
+  <article class="card">
+    <div class="card__triangle"></div>
+    <header class="card__top">
+      <p class="card__desc">Сказочное заморское яство</p>
+    </header>
+    <div class="card__main">
+      <h2 class="card__title">Нямушка</h2>
+      <span class="card__fill">с фуа-гра</span>
+      <div class="card__wrap">
+        <span class="card__portions">10 порций</span>
+        <span class="card__prize">мышь в подарок</span>
+      </div>
+    </div>
+  </article>
+  <article class="card">
+    <div class="card__triangle"></div>
     <header class="card__top">head</header>
     <div class="card__main">main</div>
   </div>
-  <div class="card">
-    <header class="card__top">head</header>
-    <div class="card__main">main</div>
-  </div>
-  <div class="card">
+  <article class="card">
+    <articleclass="card__triangle"></div>
     <header class="card__top">head</header>
     <div class="card__main">main</div>
   </div>
 </body>
-</html>
+</article>
