complete default card

--- a/source/lvl1.html
+++ b/source/lvl1.html
@@ -58,7 +58,7 @@
 </ul>
 
 <h2>Q7: Рассказать о себе</h2>
-<p>Реальных проектов своих показать не могу, так как являюсь старшим программистом в МВД. Могу рассказать, что являюсь наставником в <a href="https://htmlacademy.ru/">HTML Academy</a> на 1 и 2 уровне. Провожу для них собеседования с кандидатами на роль наставника по вёрстке. Не люблю хвалиться, но как результат моей работы можно ещё приложить <a href="https://htmlacademy.ru/blog/299-online-intensive-adaptive">ссылку с отчётом последнего потока 2 уровня</a>. Довольно часто попадаю в список лучших наставников.</p>
+<p>Занимаюсь разработкой информационных подсистем, которые автоматизируют рутинные задачи. Фронт - нативный HTML, CSS, JS - делаю полностью сам. Небольшой бэекенд на PHP + запросы в БД Oracle, либо небольшие функции. Более подробно про проекты не могу рассказать, так как работаю в МВД. Могу рассказать, что являюсь наставником в <a href="https://htmlacademy.ru/">HTML Academy</a> на 1 и 2 уровне. Провожу для них собеседования с кандидатами на роль наставника по вёрстке. Не люблю хвалиться, но как результат моей работы можно ещё приложить <a href="https://htmlacademy.ru/blog/299-online-intensive-adaptive">ссылку с отчётом последнего потока 2 уровня</a>. Довольно часто попадаю в список лучших наставников.</p>
 <p>Имеются небольшие работы с упором на JS</p>
 <ul>
   <li>Задание для ШРИ Яндекс: <a href="https://github.com/alex-koshara/YaTest">git</a> и <a href="https://alex-koshara.github.io/YaTest/">gh-pages</a></li>
