--- a/source/index.html
+++ b/source/index.html
@@ -7,30 +7,24 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Card is a capital of Kirill and Alexander</h1>
-  <article class="card">
-    <div class="card__triangle"></div>
-    <header class="card__top">
-      <p class="card__desc">Сказочное заморское яство</p>
-    </header>
-    <div class="card__main">
-      <h2 class="card__title">Нямушка</h2>
-      <span class="card__fill">с фуа-гра</span>
-      <div class="card__wrap">
-        <span class="card__portions">10 порций</span>
-        <span class="card__prize">мышь в подарок</span>
+  <div class="container">
+    <article class="card">
+      <div class="card__triangle"></div>
+      <header class="card__top">
+        <p class="card__desc">Сказочное заморское яство</p>
+      </header>
+      <div class="card__main">
+        <h2 class="card__title">Нямушка</h2>
+        <span class="card__fill">с фуа-гра</span>
+        <div class="card__wrap">
+          <span class="card__portions">10 порций</span>
+          <span class="card__prize">мышь в подарок</span>
+        </div>
+        <div class="card__weight-wrap">
+          <span class="card__weight-num">0,5</span>
+          <span class="card__to-weight">кг</span>
+        </div>
       </div>
-    </div>
-  </article>
-  <article class="card">
-    <div class="card__triangle"></div>
-    <header class="card__top">head</header>
-    <div class="card__main">main</div>
-  </div>
-  <article class="card">
-    <articleclass="card__triangle"></div>
-    <header class="card__top">head</header>
-    <div class="card__main">main</div>
+    </article>
   </div>
 </body>
-</article>
