--- a/source/index.html
+++ b/source/index.html
@@ -8,23 +8,65 @@
 </head>
 <body>
   <div class="container">
-    <article class="card">
-      <div class="card__triangle"></div>
-      <header class="card__top">
-        <p class="card__desc">Сказочное заморское яство</p>
-      </header>
-      <div class="card__main">
-        <h2 class="card__title">Нямушка</h2>
-        <span class="card__fill">с фуа-гра</span>
-        <div class="card__wrap">
-          <span class="card__portions">10 порций</span>
-          <span class="card__prize">мышь в подарок</span>
+    <div class="page-title">Ты сегодня покормил кота?</div>
+    <div class="card-list">
+      <article class="card-list__item  card">
+        <div class="card__triangle"></div>
+        <header class="card__top">
+          <p class="card__desc">Сказочное заморское яство</p>
+        </header>
+        <div class="card__main">
+          <h2 class="card__title">Нямушка</h2>
+          <span class="card__fill">с фуа-гра</span>
+          <div class="card__wrap">
+            <span class="card__portions">10 порций</span>
+            <span class="card__prize">мышь в подарок</span>
+          </div>
+          <div class="card__weight-wrap">
+            <span class="card__weight-num">0,5</span>
+            <span class="card__to-weight">кг</span>
+          </div>
         </div>
-        <div class="card__weight-wrap">
-          <span class="card__weight-num">0,5</span>
-          <span class="card__to-weight">кг</span>
+      </article>
+      <article class="card-list__item  card">
+        <div class="card__triangle"></div>
+        <header class="card__top">
+          <p class="card__desc">Сказочное заморское яство</p>
+        </header>
+        <div class="card__main">
+          <h2 class="card__title">Нямушка</h2>
+          <span class="card__fill">с фуа-гра</span>
+          <div class="card__wrap">
+            <span class="card__portions">40 порций</span>
+            <span class="card__prize">2 мыши в подарок</span>
+          </div>
+          <div class="card__weight-wrap">
+            <span class="card__weight-num">2</span>
+            <span class="card__to-weight">кг</span>
+          </div>
         </div>
-      </div>
-    </article>
+      </article>
+      <article class="card-list__item  card">
+        <div class="card__triangle"></div>
+        <header class="card__top">
+          <p class="card__desc">Сказочное заморское яство</p>
+        </header>
+        <div class="card__main">
+          <h2 class="card__title">Нямушка</h2>
+          <span class="card__fill">с фуа-гра</span>
+          <div class="card__wrap">
+            <span class="card__portions">100 порций</span>
+            <span class="card__prize">
+              5 мышей в подарок<br>
+              заказчик доволен
+            </span>
+          </div>
+          <div class="card__weight-wrap">
+            <span class="card__weight-num">5</span>
+            <span class="card__to-weight">кг</span>
+          </div>
+        </div>
+      </article>
+    </div>
   </div>
 </body>
