add query media

--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,29 @@
   <div class="container">
     <div class="page-title">Ты сегодня покормил кота?</div>
     <div class="card-list">
+      <div class="card-list__wrap">
+        <article class="card-list__item  card">
+          <div class="card__triangle"></div>
+          <header class="card__top">
+            <p class="card__desc">Сказочное заморское яство</p>
+          </header>
+          <div class="card__main">
+            <h2 class="card__title">Нямушка</h2>
+            <span class="card__fill">с фуа-гра</span>
+            <div class="card__wrap">
+              <span class="card__portions">10 порций</span>
+              <span class="card__prize">мышь в подарок</span>
+            </div>
+            <div class="card__weight-wrap">
+              <span class="card__weight-num">0,5</span>
+              <span class="card__to-weight">кг</span>
+            </div>
+          </div>
+          <footer class="card__footer">
+            <p class="card__buy">Чего сидишь? Порадуй котэ, <a href="#" class="card__buy-link">купи.</a></p>
+          </footer>
+        </article>
+      </div>
       <article class="card-list__item  card">
         <div class="card__triangle"></div>
         <header class="card__top">
@@ -17,25 +40,7 @@
         </header>
         <div class="card__main">
           <h2 class="card__title">Нямушка</h2>
-          <span class="card__fill">с фуа-гра</span>
-          <div class="card__wrap">
-            <span class="card__portions">10 порций</span>
-            <span class="card__prize">мышь в подарок</span>
-          </div>
-          <div class="card__weight-wrap">
-            <span class="card__weight-num">0,5</span>
-            <span class="card__to-weight">кг</span>
-          </div>
-        </div>
-      </article>
-      <article class="card-list__item  card">
-        <div class="card__triangle"></div>
-        <header class="card__top">
-          <p class="card__desc">Сказочное заморское яство</p>
-        </header>
-        <div class="card__main">
-          <h2 class="card__title">Нямушка</h2>
-          <span class="card__fill">с фуа-гра</span>
+          <span class="card__fill">с рыбой</span>
           <div class="card__wrap">
             <span class="card__portions">40 порций</span>
             <span class="card__prize">2 мыши в подарок</span>
@@ -45,6 +50,9 @@
             <span class="card__to-weight">кг</span>
           </div>
         </div>
+        <footer class="card__footer">
+          <p class="card__buy">Чего сидишь? Порадуй котэ, <a href="#" class="card__buy-link">купи.</a></p>
+        </footer>
       </article>
       <article class="card-list__item  card">
         <div class="card__triangle"></div>
@@ -53,7 +61,7 @@
         </header>
         <div class="card__main">
           <h2 class="card__title">Нямушка</h2>
-          <span class="card__fill">с фуа-гра</span>
+          <span class="card__fill">с курой</span>
           <div class="card__wrap">
             <span class="card__portions">100 порций</span>
             <span class="card__prize">
@@ -66,6 +74,9 @@
             <span class="card__to-weight">кг</span>
           </div>
         </div>
+        <footer class="card__footer">
+          <p class="card__buy">Чего сидишь? Порадуй котэ, <a href="#" class="card__buy-link">купи.</a></p>
+        </footer>
       </article>
     </div>
   </div>
