add active status

--- a/source/index.html
+++ b/source/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>FunBox</title>
 </head>
 <body>
   <div class="container">
     <div class="page-title">Ты сегодня покормил кота?</div>
-    <div class="card-list">
+    <section class="card-list">
       <div class="card-list__wrap">
         <article class="card-list__item  card">
-          <div class="card__triangle"></div>
-          <header class="card__top">
-            <p class="card__desc">Сказочное заморское яство</p>
-          </header>
-          <div class="card__main">
-            <h2 class="card__title">Нямушка</h2>
-            <span class="card__fill">с фуа-гра</span>
-            <div class="card__wrap">
-              <span class="card__portions">10 порций</span>
-              <span class="card__prize">мышь в подарок</span>
-            </div>
-            <div class="card__weight-wrap">
-              <span class="card__weight-num">0,5</span>
-              <span class="card__to-weight">кг</span>
+          <div class="card__container">
+            <div class="card__triangle"></div>
+            <header class="card__top">
+              <p class="card__desc">Сказочное заморское яство</p>
+            </header>
+            <div class="card__main">
+              <h2 class="card__title">Нямушка</h2>
+              <span class="card__fill">с фуа-гра</span>
+              <div class="card__wrap">
+                <span class="card__portions">10 порций</span>
+                <span class="card__prize">мышь в подарок</span>
+              </div>
+              <div class="card__weight-wrap">
+                <span class="card__weight-num">0,5</span>
+                <span class="card__to-weight">кг</span>
+              </div>
             </div>
           </div>
           <footer class="card__footer">
@@ -34,50 +36,56 @@
         </article>
       </div>
       <article class="card-list__item  card">
-        <div class="card__triangle"></div>
-        <header class="card__top">
-          <p class="card__desc">Сказочное заморское яство</p>
-        </header>
-        <div class="card__main">
-          <h2 class="card__title">Нямушка</h2>
-          <span class="card__fill">с рыбой</span>
-          <div class="card__wrap">
-            <span class="card__portions">40 порций</span>
-            <span class="card__prize">2 мыши в подарок</span>
-          </div>
-          <div class="card__weight-wrap">
-            <span class="card__weight-num">2</span>
-            <span class="card__to-weight">кг</span>
-          </div>
-        </div>
-        <footer class="card__footer">
-          <p class="card__buy">Чего сидишь? Порадуй котэ, <a href="#" class="card__buy-link">купи.</a></p>
-        </footer>
-      </article>
-      <article class="card-list__item  card">
-        <div class="card__triangle"></div>
-        <header class="card__top">
-          <p class="card__desc">Сказочное заморское яство</p>
-        </header>
-        <div class="card__main">
-          <h2 class="card__title">Нямушка</h2>
-          <span class="card__fill">с курой</span>
-          <div class="card__wrap">
-            <span class="card__portions">100 порций</span>
-            <span class="card__prize">
-              5 мышей в подарок<br>
-              заказчик доволен
-            </span>
-          </div>
-          <div class="card__weight-wrap">
-            <span class="card__weight-num">5</span>
-            <span class="card__to-weight">кг</span>
+        <div class="card__container">
+          <div class="card__triangle"></div>
+          <header class="card__top">
+            <p class="card__desc">Сказочное заморское яство</p>
+          </header>
+          <div class="card__main">
+            <h2 class="card__title">Нямушка</h2>
+            <span class="card__fill">с рыбой</span>
+            <div class="card__wrap">
+              <span class="card__portions">40 порций</span>
+              <span class="card__prize">2 мыши в подарок</span>
+            </div>
+            <div class="card__weight-wrap">
+              <span class="card__weight-num">2</span>
+              <span class="card__to-weight">кг</span>
+            </div>
           </div>
         </div>
         <footer class="card__footer">
           <p class="card__buy">Чего сидишь? Порадуй котэ, <a href="#" class="card__buy-link">купи.</a></p>
         </footer>
       </article>
-    </div>
+      <article class="card-list__item  card card--disabled">
+        <div class="card__container">
+          <div class="card__triangle"></div>
+          <header class="card__top">
+            <p class="card__desc">Сказочное заморское яство</p>
+          </header>
+          <div class="card__main">
+            <h2 class="card__title">Нямушка</h2>
+            <span class="card__fill">с курой</span>
+            <div class="card__wrap">
+              <span class="card__portions">100 порций</span>
+              <span class="card__prize">
+                5 мышей в подарок<br>
+                заказчик доволен
+              </span>
+            </div>
+            <div class="card__weight-wrap">
+              <span class="card__weight-num">5</span>
+              <span class="card__to-weight">кг</span>
+            </div>
+          </div>
+        </div>
+        <footer class="card__footer">
+          <p class="card__buy">Чего сидишь? Порадуй котэ, <a href="#" class="card__buy-link">купи.</a></p>
+        </footer>
+      </article>
+    </section>
   </div>
+<script src='js/main.js'></script>
 </body>
+</html>
