edit json and render cards js

--- a/source/index.html
+++ b/source/index.html
@@ -10,13 +10,11 @@
   <div class="container">
     <div class="page-title">Ты сегодня покормил кота?</div>
     <section class="card-list">
-      <div class="card-list__wrap">
-        
-      </div>
+      <!-- inner data json -->
     </section>
   </div>
 <template id="card-template" style="display: none">
-  <div class="card-list__wrap">
+  <div id="card-wrap" class="card-list__wrap">
     <article class="card-list__item  card">
       <div class="card__container">
         <div class="card__triangle"></div>
