add mouseout and card active style

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
     </section>
   </div>
 <template id="card-template" style="display: none">
-  <div id="card-wrap" class="card-list__wrap">
+  <div class="card-list__wrap">
     <article class="card-list__item  card">
       <div class="card__container">
         <div class="card__triangle"></div>
